--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-330.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-3.06MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-245.1KB/s(Youtube:不良林), server: 120.241.236.218, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.52MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-327.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-467.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-941.0KB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 台湾-5.65MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.75MB/s(Youtube:不良林), server: 3.111.242.2, port: 51846, type: ss, cipher: chacha20-ietf-poly1305, password: RekWopdog8}
-  - {name: 🇺🇸 美国-3.07MB/s(Youtube:不良林), server: 52.13.166.179, port: 59369, type: ss, cipher: chacha20-ietf-poly1305, password: fijboorrom}
+  - {name: 🇨🇳 中国-356.6KB/s(Youtube:不良林), server: 120.241.236.113, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.67MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-2.77MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-297.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-321.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-471.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-312.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-363.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-245.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-941.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.65MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.67MB/s(Youtube:不良林)
+      - 🇨🇦 (已存活1天)加拿大-1.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-297.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
