--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.06MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 104.129.63.65, port: 8443, type: trojan, password: cUDgjDkSfn, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-512.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-221.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-365.6KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.74MB/s(Youtube:不良林), server: 52.13.166.179, port: 59369, type: ss, cipher: chacha20-ietf-poly1305, password: fijboorrom}
+  - {name: 🇨🇳 中国-494.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-451.4KB/s(Youtube:不良林), server: 120.241.236.216, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.93MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-321.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-471.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-312.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-365.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
