--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-1.75MB/s(Youtube:不良林), server: 3.111.242.2, port: 51846, type: ss, cipher: chacha20-ietf-poly1305, password: RekWopdog8}
-  - {name: 🇨🇳 中国-567.1KB/s(Youtube:不良林), server: 120.241.236.215, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.29MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-356.6KB/s(Youtube:不良林), server: 120.241.236.113, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-549.1KB/s(Youtube:不良林), server: 120.241.236.215, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-631.7KB/s(Youtube:不良林), server: 120.241.236.113, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-472.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇮🇳 印度-1.67MB/s(Youtube:不良林), server: 3.111.242.2, port: 51846, type: ss, cipher: chacha20-ietf-poly1305, password: RekWopdog8}
+  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇳 中国-321.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-205.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-312.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-363.4KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-508.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-567.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-356.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-549.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-472.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
       - 🇨🇳 中国-321.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-312.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-363.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-508.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
